--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="temp_site_URL">http://yartemp.com</string>
     <string name="temp_data_URL">http://yartemp.com/webdata/</string>
+    <string name="degrees_delta_celsius">" °C/h"</string>
+    <string name="loading">loading&#8230;</string>
 </resources>
